--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,20 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
-venv/
-ENV/
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
 # Environment variables
 .env
 
-# Logs
-*.log
+# Output directory for audio files
+output/
 
-# Local development
-.DS_Store
-Thumbs.db
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# Output directory - ignore everything except feed.xml and episodes
-output/*
-!output/feed.xml
-!output/episodes/
-output/episodes/*
-!output/episodes/*.mp3
-!output/episodes/*.png
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# Virtual environments
+venv/
+env/
+ENV/
